--- a/src/radmerceBot.Api/Dockerfile
+++ b/src/radmerceBot.Api/Dockerfile
@@ -1,4 +1,4 @@
-﻿# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:10.0 AS base
@@ -12,8 +12,8 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["../src/radmerceBot.Api/radmerceBot.Api.csproj", "src/radmerceBot.Api/"]
-RUN dotnet restore "../src/radmerceBot.Api/radmerceBot.Api.csproj"
+COPY ["src/radmerceBot.Api/radmerceBot.Api.csproj", "src/radmerceBot.Api/"]
+RUN dotnet restore "./src/radmerceBot.Api/radmerceBot.Api.csproj"
 COPY . .
 WORKDIR "/src/src/radmerceBot.Api"
 RUN dotnet build "./radmerceBot.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
